--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,5 +4,8 @@
 <!-- Header -->
 <header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
 	<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
+	<div align="right">
+		martyushevsky@gmail.com
+	</div>
 	
 </header>
