--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 <header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
 	<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
 	<nav>
-		martyushevsky@gmail.com
+		&#8594; martyushevsky@gmail.com &#8592;
 	</nav>
 	
 </header>
